# vidstamp

./: LICENSE  README.md  pyproject.toml  vidstamp.py
