[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vidstamp"
version = "1.0.0"
description = "Burn real-world timestamps into pre-recorded video"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["click>=8.0"]

[project.scripts]
vidstamp = "vidstamp:cli"

[tool.setuptools]
py-modules = ["vidstamp"]
